--- a/P001808.opf/meta.yml
+++ b/P001808.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P001808
+id: P001808
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1KG22951
   title: ཧུ་མ་དང་ཧུ་མའི་སྒྲུང་རབས་ཆེན་མོའི་དཔྱད་གླེང་།
-  volume: ''
   author: ''
+  volumes: {}
