--- a/P001808.opf/layers/v001/Pagination.yml
+++ b/P001808.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: c5ef921fe85d4b95a3e4bfd8bae972fb
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   dd654188cf0d45e2a5592688553c8ff5:
